--- a/changelog.txt
+++ b/changelog.txt
@@ -21,3 +21,6 @@ v0.0.8
 
 v0.1.0
 - First working version with links, directory structure
+
+v0.1.1
+- Stream links directly from menu item, without navigating .pls file
