--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1,12 +1,12 @@
-# XBMC Media Center language file
+# Kodi Media Center language file
 msgid ""
 msgstr ""
-"Project-Id-Version: XBMC-Addons\n"
-"Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
-"POT-Creation-Date: 2016-07-07 23:12+0000\n"
+"Project-Id-Version: Kodi-Addons\n"
+"Report-Msgid-Bugs-To: paris.estmagik@hotmail.fr\n"
+"POT-Creation-Date: 2016-07-07 23:35+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE\n"
+"Last-Translator: superphunthyme\n"
+"Language-Team: None\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -26,5 +26,13 @@ msgid "Quality"
 msgstr ""
 
 msgctxt "#30004"
-msgid "High (AAC)"
+msgid "High Quality (AAC)"
+msgstr ""
+
+msgctxt "#30005"
+msgid "Low Quality (MP3)"
+msgstr ""
+
+msgctxt "#30006"
+msgid "All stations"
 msgstr ""
