--- a/resources/language/French (Canada)/strings.po
+++ b/resources/language/French (Canada)/strings.po
@@ -1,17 +1,17 @@
-# XBMC Media Center language file
+# Kodi Media Center language file
 msgid ""
 msgstr ""
-"Project-Id-Version: XBMC-Addons\n"
-"Report-Msgid-Bugs-To: alanwww1@xbmc.org\n"
-"POT-Creation-Date: 2016-07-07 23:12+0000\n"
+"Project-Id-Version: Kodi-Addons\n"
+"Report-Msgid-Bugs-To: paris.estmagik@hotmail.fr\n"
+"POT-Creation-Date: 2016-07-07 23:35+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE\n"
+"Last-Translator: superphunthyme\n"
+"Language-Team: None\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: fr_ca\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n > 1)\n"
 
 msgctxt "#30001"
 msgid "Radio 1 Region"
@@ -26,5 +26,13 @@ msgid "Quality"
 msgstr "Qualité"
 
 msgctxt "#30004"
-msgid "High (AAC)"
-msgstr "Haute (AAC)"
+msgid "High Quality (AAC)"
+msgstr "Haute Qualité (AAC)"
+
+msgctxt "#30005"
+msgid "Low Quality (MP3)"
+msgstr "Basse Qualité (MP3)"
+
+msgctxt "#30006"
+msgid "All stations"
+msgstr "Toutes les stations"
